Реализует ручки создания и подтверждения загрузки видео
