# internal/handler/compression_completed.go
@@ -1,10 +1,0 @@
-package handler
-
-func (h *Handler) CompressionCompleted() {
-	//h.saga.Run(ctx, func(ctx context.Context, services *service.Service) error {
-	//	services.VideoAsset.Create(ctx, videoID, domain.VideoAssetTagCompressed, bucketName, contentType, bytes)
-	//
-	//	status := domain.VideoStatusReady
-	//	services.Video.Update(ctx, videoID, &status)
-	//})
-}
