# internal/handler/upload_completed.go
@@ -1,8 +1,0 @@
-package handler
-
-func (h *Handler) UploadCompleted() {
-	// Создаёт asset видео с тегом original
-	//h.saga.Run(ctx, func(ctx context.Context, services *service.Service) error {
-	//	services.VideoAsset.Create(ctx, videoID, domain.VideoAssetTagOriginal, bucketName, contentType, sizeBytes)
-	//})
-}
